@@ -2,11 +2,16 @@ package ru.practicum.explore.service;
 
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.explore.dto.compilation.CompilationDto;
 import ru.practicum.explore.dto.compilation.NewCompilationDto;
 import ru.practicum.explore.dto.compilation.UpdateCompilationRequest;
+import ru.practicum.explore.error.exception.ConflictException;
 import ru.practicum.explore.error.exception.NotFoundException;
 import ru.practicum.explore.mapper.CompilationMapper;
 import ru.practicum.explore.model.Compilation;
@@ -29,12 +34,17 @@ public class CompilationServiceImpl implements CompilationService {
 
     @Override
     public CompilationDto createCompilation(NewCompilationDto dto) {
-        Compilation compilation = CompilationMapper.toCompilation(dto);
-        if (dto.getEvents() != null && !dto.getEvents().isEmpty()) {
-            Set<Event> events = new HashSet<>(eventRepository.findAllById(dto.getEvents()));
-            compilation.setEvents(events);
+        if (!compilationRepository.findByTitleIgnoreCase(dto.getTitle()).isEmpty()) {
+            throw new NotFoundException("Подборка с названием " + dto.getTitle() + " уже существует");
         }
-        return CompilationMapper.toDto(compilationRepository.save(compilation));
+        Set<Event> events = new HashSet<>();
+        if (dto.getEvents() != null && !dto.getEvents().isEmpty()) {
+            events = new HashSet<>(eventRepository.findAllByIdIn(dto.getEvents().stream().toList()));
+        }
+
+        Compilation compilation = CompilationMapper.toCompilation(dto, events);
+        compilation = compilationRepository.save(compilation);
+        return CompilationMapper.fromCompilation(compilation);
     }
 
     @Override
@@ -47,44 +57,43 @@ public class CompilationServiceImpl implements CompilationService {
 
     @Override
     public CompilationDto updateCompilation(Long compId, UpdateCompilationRequest dto) {
-        Compilation compilation = getCompilationIfExists(compId);
-
-        // Обновляем поля, если они указаны
-        if (dto.getTitle() != null && !dto.getTitle().isBlank()) {
-            compilation.setTitle(dto.getTitle());
-        }
+        Compilation compilation = compilationRepository.findById(compId).orElseThrow(() -> new NotFoundException("Подборка с идентификатором " + compId + " не найдена"));
 
         if (dto.getPinned() != null) {
             compilation.setPinned(dto.getPinned());
         }
 
+        if (dto.getTitle() != null) {
+            if (!compilationRepository.findByTitleIgnoreCase(dto.getTitle()).isEmpty()) {
+                throw new ConflictException("Подборка с названием " + dto.getTitle() + " уже существует");
+            }
+            if (compilation.getTitle().equalsIgnoreCase(dto.getTitle())) {
+                throw new ConflictException("Подборка с названием " + dto.getTitle() + " уже существует");
+            }
+            compilation.setTitle(dto.getTitle());
+        }
+
         if (dto.getEvents() != null) {
-            Set<Event> events = new HashSet<>(eventRepository.findAllById(dto.getEvents()));
+            Set<Event> events = new HashSet<>();
+            if (!dto.getEvents().isEmpty()) {
+                events = new HashSet<>(eventRepository.findAllByIdIn(dto.getEvents().stream().toList()));
+            }
             compilation.setEvents(events);
         }
 
-        return CompilationMapper.toDto(compilationRepository.save(compilation));
+        return CompilationMapper.fromCompilation(compilationRepository.save(compilation));
     }
 
     @Override
     public List<CompilationDto> getCompilations(Boolean pinned, int from, int size) {
-        List<Compilation> compilations;
-        if (pinned == null) {
-            compilations = compilationRepository.findAll();
-        } else {
-            compilations = compilationRepository.findAllByPinned(pinned);
-        }
-
-        return compilations.stream()
-                .skip(from)
-                .limit(size)
-                .map(CompilationMapper::toDto)
-                .collect(Collectors.toList());
+        Pageable pageable = PageRequest.of(from / size, size, Sort.by("id"));
+        Page<Compilation> compilations = pinned == null ? compilationRepository.findAll(pageable) : compilationRepository.findByPinned(pinned, pageable);
+        return compilations.stream().map(CompilationMapper::fromCompilation).toList();
     }
 
     @Override
     public CompilationDto getCompilationById(Long compId) {
-        return CompilationMapper.toDto(getCompilationIfExists(compId));
+        return CompilationMapper.fromCompilation(compilationRepository.findById(compId).orElseThrow(() -> new NotFoundException("Подборка не найдена")));
     }
 
     // Вспомогательный метод
